# ingest-insight-act

./: .env.example  .env.production.example  .gitignore  Caddyfile  DEPLOY.md  claude_desktop_mcp.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/campaigns/: page.tsx
frontend/src/app/harness/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/sources/: page.tsx
frontend/src/lib/: api.ts
migrations/: 001_initial_schema.sql
scripts/: deploy.sh
